--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,17 +6,13 @@
     	<div>
     		<h1><a href="/">sun's Blog</a></h1>
     	</div>
-
-    	<div>
-    		<p>published : 23.04.2019, 17:30</p>
-    		<h2><a href="">My first post</a></h2>
-    		<p>Aenean eu leo quam.</p>
-    	</div>
-
-    	<div>
-    		<p>published : 2019/04/23, 17:30</p>
-    		<h2><a href="">My second post</a></h2>
-    		<p>aencean eu leo quam.</p>
-    	</div>
+		
+		{% for post in posts %}
+			<div>
+				<p>published:25.04.2019, 15:50</p>
+				<h2><a href="">{{ post.title }}</a></h2>
+				<p>{{ post.test|linebreaksbr }}</p>
+			</div>
+		{% endfor %}
     </body>
 </html>
