--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,13 @@
-<html>
-    <head>
-        <title>taiyousun's blog</title>
-    </head>
-    <body>
-    	<div>
-    		<h1><a href="/">sun's Blog</a></h1>
-    	</div>
-		
-		{% for post in posts %}
-			<div>
-				<p>published:25.04.2019, 15:50</p>
-				<h2><a href="">{{ post.title }}</a></h2>
-				<p>{{ post.test|linebreaksbr }}</p>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+	{% for post in posts %}
+		<div class="post">
+			<div class="date">
+				{{ post.published_date }}
 			</div>
-		{% endfor %}
-    </body>
-</html>
+			<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+			<p>{{ post.text|linebreaksbr }}</p>
+		</div>
+	{% endfor %}
+{% endblock %}
